Webservice client refactored